Petit commit du dev full stack

--- a/connexion.html
+++ b/connexion.html
@@ -172,6 +172,7 @@
                         <select name="select" class="form-control">
                           <option value="valeur1">Apartment</option>
                           <option value="valeur2">House</option>
+                          <option value="valeur3">Loft</option>
                         </select>
                       </label>
                         <div class="validate"></div>
