--- a/property-grid.html
+++ b/property-grid.html
@@ -314,8 +314,9 @@
               <form>
                 <select class="custom-select">
                   <option selected>All</option>
-                  <option value="1">New to Old</option>
-                  <option value="2">France Only</option>
+                  <option value="1">France Only</option>
+                  <option value="2">Spain Only</option>
+                  <option value="3">Italy Only</option>
                 </select>
               </form>
             </div>
