Dev Full Stack DevOps

--- a/property-grid.html
+++ b/property-grid.html
@@ -279,7 +279,7 @@
                       <div class="col-md-12 mb-3">
                         <div class="form-group">
                           <label>Upload an image of the property
-                          <input type="file" name="image" class="form-control">
+                          <input type="text" name="image" class="form-control" placeholder="Link of your image...">
                         </label>
                           <div class="validate"></div>
                         </div>
