--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 </div>
                 <div class="card-body-d">
                   <p class="content-d color-text-a">
-                    Student passionate about Web Technologies!
+                    Student passionate about sex!
                   </p>
                   <div class="info-agents color-a">
                    
